--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello Coursera</h1>
-    <p>Hello Coursera!</p>
+    <p>Hello Coursera! Let me try to edit something and see if browser-sync is working.</p>
+    <p>So far, I don't think it's working properly. Are you working?</p>
 </body>
 </html>
